3632: fix error focus contrast
Links by default when focused get a yellow background. We should remove this for errors. Also remove some extra unneeded styles from the start page validation error message.

Author: @robinwhittleton

--- a/app/assets/stylesheets/pages/_start.scss
+++ b/app/assets/stylesheets/pages/_start.scss
@@ -113,14 +113,7 @@
   .error,
   .validation-message {
     border-color: $white;
-  }
-
-  .validation-message {
-    color: $white;
-
-    :focus {
-      background-color: $mainstream-brand;
-    }
+    color: inherit;
   }
 
   .block-label {
